--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
 }
 
 .subtitle-text {
-    font-weight: lighter;
+    font-weight: normal;
     font-size: 16pt;
 }
 
@@ -847,7 +847,7 @@
 }
 
 .blog-content > .blog-subtext  {
-    font-weight: 400;
+    font-weight: lighter;
     font-size: 16px;
 }
 
