--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
 }
 
 .subtitle-text {
-    font-weight: normal;
+    font-weight: 600;
     font-size: 16pt;
 }
 
@@ -153,7 +153,7 @@
 
 /*** Button ***/
 .btn {
-    font-weight: bold;
+    font-weight: bold   ;
     text-transform: uppercase;
     transition: .5s;
 }
@@ -266,7 +266,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, 0.4);
     z-index: 1;
 }
 
