up ar carousel subtitle weight

--- a/ar/css/style.css
+++ b/ar/css/style.css
@@ -866,3 +866,11 @@ body {
     border-bottom-right-radius: 10px;
 }
 /*** Blog End ***/
+
+
+
+
+.subtitle-text {
+    font-weight: 600;
+    font-size: 16pt;
+}
