--- a/ar/css/style.css
+++ b/ar/css/style.css
@@ -272,7 +272,7 @@ body {
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, 0.4);
     z-index: 1;
 }
 
